
PhingBuilder
----------------------
* Add new plug-in for PHP build tool Phing (CC-613). Submitted by Hans Lellelid.

PluginRegistry
----------------------
* Remove deprecated method PluginRegistry.getDefaultProperties(String pluginName).

Project
----------------------
* Add "projectname" property to properties passed to Builder.build().

ProjectConfig
----------------------
* Fixed a bug where ProjectConfig.stop() was calling Project.start() instead of Project.stop(). The effect of this would be for projects that have been removed from config.xml to continue to build.

Pvcs
----------------------
* Fixed bug where extra double quotes were being added to the call to pcli (CC-604). Patches by Karsten Wintermann and Dave Kilroy.

SSCM
----------------------
* Fixed bug that caused SSCM to NOT find Surround SCM modifications if email field is empty (CC-631). Fix suggested by Richie Yan & Bob.

StartTeam
----------------------
* Fixed issue that deleted Starteam-files were always detected as Modifications from a 'Unknown'-User, when the Locale was not English (CC-455). Patch by Markus Grieder, reviewed by Benjamin Burgess.

UCM
----------------------
* Added support for multiple vobs (CC-597). Patch by Mark Holster.

XMLConfigManager
----------------------
* Check files included with the include.projects mechanism when deciding if configuration file needs to be reloaded. Part of (CC-266).

YahooPublisher
----------------------
* Publishing build results url to Yahoo IM (CC-382). See configxml.html documentation about required third-party libraries. Contributed by Markus M. May.

reporting
======================

build.xml
----------------------
* Now prompts user for jmxport (CC-448). Root cruise build defaults to 8000, as before. Patch by Antek Baranski.

XmlServlet
----------------------
* Enhancement to enable Cruise to work with the cctray distributed as part of CruiseControl.net. Patch by Davie Moston.